# modules/apps/object/object-rest-impl/rest-openapi.yaml
@@ -790,7 +790,7 @@ paths:
         delete:
             description:
                 Deletes the collaborator for an object entry and returns a 204 if the operation succeeds.
-            operationId: deleteScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaboratorTypeCollaborator
+            operationId: deleteScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaborator
             parameters:
                 -   in: path
                     name: scopeKey
@@ -822,7 +822,7 @@ paths:
         get:
             description:
                 Retrieves the collaborator for an object entry.
-            operationId: getScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaboratorTypeCollaborator
+            operationId: getScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaborator
             parameters:
                 -   in: path
                     name: scopeKey
@@ -870,7 +870,7 @@ paths:
         put:
             description:
                 Add or update a collaborator received in the request.
-            operationId: putScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaboratorTypeCollaborator
+            operationId: putScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaborator
             parameters:
                 -   in: path
                     name: scopeKey
@@ -1226,7 +1226,7 @@ paths:
         delete:
             description:
                 Deletes the collaborator for an object entry and returns a 204 if the operation succeeds.
-            operationId: deleteObjectEntryCollaboratorByTypeCollaboratorTypeCollaborator
+            operationId: deleteObjectEntryCollaboratorByTypeCollaborator
             parameters:
                 -   in: path
                     name: objectEntryId
@@ -1254,7 +1254,7 @@ paths:
         get:
             description:
                 Retrieves the collaborator for an object entry.
-            operationId: getObjectEntryCollaboratorByTypeCollaboratorTypeCollaborator
+            operationId: getObjectEntryCollaboratorByTypeCollaborator
             parameters:
                 -   in: path
                     name: objectEntryId
@@ -1298,7 +1298,7 @@ paths:
         put:
             description:
                 Add or update a collaborator received in the request.
-            operationId: putObjectEntryCollaboratorByTypeCollaboratorTypeCollaborator
+            operationId: putObjectEntryCollaboratorByTypeCollaborator
             parameters:
                 -   in: path
                     name: objectEntryId
